# ws-gw

./: CMakeLists.txt  test.cpp
include/: ws-gw.h
proto/: client_generated.h  service_generated.h  shared_generated.h
src/: service.cpp
tests/: client.ts
